Fix issue with datapicker visibiliy in small detail view

--- a/src/files/client/modules/dubas-light-theme/css/espo/light-dubas.css
+++ b/src/files/client/modules/dubas-light-theme/css/espo/light-dubas.css
@@ -9538,7 +9538,7 @@ button.close {
     top: 0;
     left: 0;
     padding: 4px;
-    z-index: 1030 !important;
+    z-index: 1060 !important;
 }
 
 .datepicker-dropdown:before {
